# rust_primitives

./: Cargo.toml
src/: inversion_count.rs  lib.rs  merge_sort.rs  quick_sort.rs
src/permutations/: inversion_count.rs  mod.rs
src/sorting/: merge_sort.rs  mod.rs  quick_sort.rs
